--- a/CSS/estiloDescarga.css
+++ b/CSS/estiloDescarga.css
@@ -6,7 +6,7 @@
 /*Estilo y maqueta del main*/
 main {
     display: flex;
-    background: url(../imagenes/física-e1534938838719.jpg);
+    background: url(../imagenes/fondoDescargas.jpg);
     justify-content: center;
     align-content: center;
     padding: 2em;
